--- a/create-point.html
+++ b/create-point.html
@@ -53,6 +53,7 @@
               <select name="uf">
                 <option value="">Selecione o Estado</option>
               </select>
+              <input type="hidden" name="state"> <!--Input hidden é escondido-->
             </div>
             <div class="field">
               <label for="city">Cidade</label>
@@ -67,5 +68,7 @@
       </form>
 
   </div>
+
+  <script src="/scripts/create-point.js"></script>
 </body>
 </html>
