--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
   <title>Ecoleta</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
+  
   <link rel="stylesheet" href="/styles/main.css">
   <link rel="stylesheet" href="/styles/home.css">
+  <link rel="stylesheet" href="/styles/modal.css">
+
   <link rel="stylesheet" href="/styles/responsive.css">
 
 </head>
@@ -18,7 +21,7 @@
 
       <header>
         <img src="/assets/logo.svg" alt="logomarca">
-        <a href="#">
+        <a href="/create-point.html">
           <span></span>
           Cadastre um ponto de coleta</a>
       </header>
@@ -37,5 +40,25 @@
 
     </div>
   </div>
+
+  <div id="modal" class="hide"> <!--Abrir uma janela sobre toda tela inicial-->
+    <div class="content">
+      <div class="header">
+        <h1>Pontos de Coleta</h1>
+        <a href="#">Fechar</a>
+      </div>
+      <form action="/search-results.html">
+        <label for="search">Cidade</label>
+        <div class="search field">
+          <input type="text" name="search" placeholder="Pesquise por cidade">
+          <button>
+            <img src="/assets//search.svg" alt="buscar">
+          </button>
+        </div>
+      </form>
+    </div>
+  </div>
+
+  <script src="/scripts/index.js"></script>
 </body>
 </html>
